--- a/photo_Gallery.html
+++ b/photo_Gallery.html
@@ -22,15 +22,15 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 <nav class="w3-sidebar w3-bar-block w3-small w3-hide-small w3-center">
   <!-- Avatar image in top left corner -->
   <img src="dp.jpg" style="width:100%">
-  <a href="file:///C:/laragon/www/aizaproject/index.html" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
+  <a href="https://sitiyusaiza.github.io" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
     <i class="fa fa-home w3-xxlarge"></i>
     <p>HOME</p>
   </a>
-  <a href="file:///C:/laragon/www/aizaproject/photo_Gallery.html" class="w3-bar-item w3-button w3-padding-large w3-black">
+  <a href="https://sitiyusaiza.github.io/photo_Gallery.html" class="w3-bar-item w3-button w3-padding-large w3-black">
     <i class="fa fa-user w3-xxlarge"></i>
     <p>GALLERY</p>
   </a>
-  <a href="file:///C:/laragon/www/aizaproject/about_Us.html" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
+  <a href="https://sitiyusaiza.github.io/about_Us.html" class="w3-bar-item w3-button w3-padding-large w3-hover-black">
     <i class="fa fa-eye w3-xxlarge"></i>
     <p>ABOUT US</p>
   </a>
